@@ -8,6 +8,9 @@
 - Fixed a problem with asciidoc DocBook output (Dbt 427214, Michael Ablassmeier)
 - Report when python-curses is missing and colors don't work (eg. on OpenSUSE)
 - Improve --version output wrt. terminal and color support
+- Fixed a few inaccuracies in the man page. (John Goggan)
+- Fixed opening vanished files in /proc in dstat_topcpu.
+- Fixed formatting bug in dstat_topcpu.
 
 * 0.6.6 - Unemployed - released 28/04/2007
 - Removed SwapCached from the Cached counter (Dbt 418326, Peter Rabbitson)
